Dodanie route'a i infa w Swaggerze
